# xsd-cmake

./: CMakeLists.txt  LICENSE  README.md  libcutl.patch  libcutl.sh
patches/: cli.patch  libcutl.patch  xsd.patch
scripts/: cli.sh  libxsd-frontend.sh  xsd.sh
